--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,15 @@
 *{
 	text-align: center;
 }
+html{
+	font-size: 62,5%;
+}
+h1{
+	font-size: 8vw;
+}
+body{
+	font-size: 1.6rem;
+}
 #first{
 	background-color: blue;
 }
@@ -13,15 +22,35 @@
 	background-color: red;
 }
 
+#iut{
+	content: url("../img/logo-iut.jpg");
+	width: 300px;
+	margin: auto;
+}
+
 img{
 	width: 100%;
 	max-width: 500px;
 }
-
-form{
-	width: 200px;
+table{
+	border-collapse: collapse;
+}
+td,th{
+	border: 1px solid black;
+}
+th{
+	background-color: grey;
 }
 
-@media all and (max-width: 500px){
+form{
+	width: 170px;
+	margin: auto;
+}
 
+@media (-webkit-device-pixel-ratio: 2) and (min-width: 768px){
+	#iut{
+		content: url("../img/logo-iut2.jpg");
+		width: 600px;
+		margin: auto;
+	}
 }
